--- a/Resources/Styles/Styles/Simplified Light/design.css
+++ b/Resources/Styles/Styles/Simplified Light/design.css
@@ -239,6 +239,11 @@ div[id=mark] {
 #historic_messages[isreload="true"].loaded {
 	opacity: 1.0;
 }
+
+#historic_messages.notransition {
+	transition: none;
+}
+
 /* NOTICE/CTCP/WALLOPS */
 
 body div.line[ltype*=ctcp],
