--- a/Resources/Styles/Styles/Total Sublime/design.css
+++ b/Resources/Styles/Styles/Total Sublime/design.css
@@ -280,6 +280,10 @@ body div.line.selectedUser[highlight=false] {
 	opacity: 1.0;
 }
 
+#historic_messages.notransition {
+	transition: none;
+}
+
 /* NOTICE/CTCP/WALLOPS */
 
 body div.line[ltype*=ctcp],
